# matrix-game-solver

./: .gitignore  README.md
examples/: 2x2_analytical.txt  2x3_graphical.txt  4x4_no_saddle.txt  example_marketing.txt  test_degenerate.txt  test_large_scale.txt  test_micro_dominance.txt
logs/: log_2x2_analytical.txt  log_2x3_graphical.txt  log_4x4_no_saddle.txt  log_marketing_example.txt  log_test_degenerate.txt  log_test_large_scale.txt  log_test_micro_dominance.txt
matrix_game/: benchmarking.py  formatting.py  game.py  gui_app.py  main.py  pyproject.toml
matrix_game/solvers/: analytical.py  dominance.py  graphical.py  saddle_point.py  simplex.py
matrix_game/visualization/: plots.py
